<resources>
    <string name="app_name">AndroidAppProject</string>

    <string name="get_latest_news_api">http://166.111.68.66:2042/news/action/query/latest</string>
    <string name="search_news_api">http://166.111.68.66:2042/news/action/query/search</string>
    <string name="get_news_detail_api">http://166.111.68.66:2042/news/action/query/detail</string>

    <string name="news_detail">News Detail</string>
    <string name="search_result">Search Result</string>

    <string name="search">Search</string>

    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="settings">Settings</string>
    <string name="channel">Channel</string>

    <string name="my_channel">My Channel</string>
    <string name="more_channel">More Channel</string>

    <string name="share">Share</string>
    <string name="star">Star</string>
    <string name="read">Read</string>
<!--    <string name="ban">Ban</string>
-->
    <string name="share_to_wechat">Share to WeChat</string>
    <string name="share_to_weibo">Share to Weibo</string>
    <string name="share_to_moment">Share to timeline</string>
    <string name="more_options">More options</string>

    <string name="latest">Latest</string>
    <string name="technology">Technology</string>
    <string name="education">Education</string>
    <string name="military">Military</string>
    <string name="domestic">Domestic</string>
    <string name="society">Society</string>
    <string name="culture">Culture</string>
    <string name="car">Car</string>
    <string name="international">International</string>
    <string name="sport">Sport</string>
    <string name="economy">Economy</string>
    <string name="health">Health</string>
    <string name="entertainment">Entertainment</string>

    <string name="preference">Preference</string>
    <string name="no_image_mode">No Image Mode</string>
    <string name="no_image_mode_desc">Images will not be loaded when articles is being shown</string>
    <string name="night_mode">Night Mode</string>
    <string name="version">Version:V0.0.1</string>
    <string name="authors">Authors</string>
    <string name="contributors">Contributors</string>
    <string name="contributors_desc">https://github.com/AmadeusChan/AndroidAppProject/graphs/contributors</string>
    <string name="about">About</string>

    <string name="text_only_mode">TEXT_ONLY_MODE</string>
    <string name="text_only_key">TEXT_ONLY_KEY</string>

    <string name="facebook_app_id">907954352694691</string>
    <string name="weibo_app_key">2428964589</string>
    <string name="app_secret">50040eee9857846554334ae7fd3786b4</string>
    <string name="weibo_redirect_url">https://api.weibo.com/oauth2/default.html</string>

</resources>
