<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/share"
        app:showAsAction="always"
        android:icon="@drawable/ic_share_white_24dp"
        android:title="@string/share"/>

    <item
        android:id="@+id/star"
        app:showAsAction="always"
        android:icon="@drawable/ic_star_white_24dp"
        android:title="@string/star" />

    <item
        android:id="@+id/read"
        app:showAsAction="always"
        android:icon="@drawable/ic_keyboard_voice_white_24dp"
        android:title="@string/read" />

    <item
        android:id="@+id/ban"
        app:showAsAction="always"
        android:icon="@drawable/ic_not_interested_white_24dp"
        android:title="@string/ban" />

</menu>