<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/channel_toolbar"
            android:layout_height="?attr/actionBarSize"
            android:layout_width="match_parent"
            app:title="@string/channel" />

    </android.support.design.widget.AppBarLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/colorPrimaryText"
        android:textSize="@dimen/body_text_size"
        android:text="@string/my_channel"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/channel_mine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="never" >
    </android.support.v7.widget.RecyclerView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/colorPrimaryText"
        android:textSize="@dimen/body_text_size"
        android:text="@string/more_channel"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/channel_more"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never" >
    </android.support.v7.widget.RecyclerView>

</LinearLayout>